img changed to webp

--- a/src/pages/foraeldre.astro
+++ b/src/pages/foraeldre.astro
@@ -11,7 +11,7 @@ import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
     <div class="mobilehero">
       <h1 class="primary-header">Forældre</h1>
       <h2 class="subheader">Rådgivning for forældre og pårørende</h2>
-      <img src="images/heroimages/mom-girl-hug.jpg" alt="Mor og pige krammer" />
+      <img src="/images/heroimages/mom-girl-hug.webp" alt="Mor og pige krammer" />
       <p>
         Hos vores rådgivning kan du få gode råd og inspiration til alt fra opdragelse og grænsesætning, til hvordan du som forælder eller anden pårørende tackler lavt selvværd, ensomhed, selvmordstanker, selvskade og spiseforstyrrelser.
         <br />
@@ -31,7 +31,7 @@ import BrevkasseCard from "../components/cards/BrevkasseCard.astro";
         </p>
       </div>
       <div>
-        <img src="images/heroimages/mom-girl-hug.jpg" alt="Mor og pige krammer" />
+        <img src="/images/heroimages/mom-girl-hug.webp" alt="Mor og pige krammer" />
       </div>
     </div>
     <div class="section-2">
