--- a/src/pages/frivillig.astro
+++ b/src/pages/frivillig.astro
@@ -6,7 +6,7 @@ import ColorSection from "../components/ui/ColorSection.astro"
 <BaseLayout title="Bliv frivillig">
 	<div class="Frivillig">
 		<div class="grid-container">
-			<img src="/images/heroimages/three-girls-walking.png" alt="Three girl walking in a park">
+			<img src="/images/heroimages/three-girls-walking.webp" alt="Three girl walking in a park">
 			<div>
 
 		<h1 class="primary-header">Bliv frivilig</h1>
