--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
 <BaseLayout title="GirlTalk">
   <div class="indexlayout">
     <section class="indexherosection">
-      <img src="images/heroimages/fpimg.png" alt="Image with text." />
+      <img src="/images/heroimages/fpimg.webp" alt="Image with text." />
     </section>
     <div class="BoxColorButtonCenter">
       <BoxColorButton size="m-extra-small-d-medium" title="Har du tanker, der fylder?" color="purple" text="Start anonym chat">
@@ -22,7 +22,7 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
       <h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
       <div class="medier-second-grid">
         <section class="mediumarticlecard">
-          <a href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?" /></a>
+          <a href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?" /></a>
         </section>
         <section class="double-articlecard-second">
           <a href="#"> <ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
@@ -43,7 +43,7 @@ import BoxColorButton from "../components/ui/BoxColorButton.astro";
         </div>
       </section>
       <section class="bottom-section-image">
-        <img src="images/heroimages/girls-on-stairs-2.jpg" alt="Decorative image" />
+        <img src="/images/heroimages/girls-on-stairs-2.webp" alt="Decorative image" />
         <div class="button-wrapper">
           <Button text="Læs mere om os" />
         </div>
