--- a/src/pages/medier.astro
+++ b/src/pages/medier.astro
@@ -16,7 +16,7 @@ import Dropdown from "../components/ui/Dropdown.astro"
 <div class="medier-first-section">
 	<section class="largearticlecard">
 		<a href="#">
-		<img src="images/articleimages/largearticleimage.png" alt="Hvordan vander vi venskabets blomst? Artikel">
+		<img src="/images/articleimages/largearticleimage.webp" alt="Hvordan vander vi venskabets blomst? Artikel">
 		<p class="subheader-firstarticle">Jagten på den perfekte buket
 			af venskaber kan være svær at sammensætte, men også fyldt af farverige glæder?</p></a>
 	</section>
@@ -26,32 +26,32 @@ import Dropdown from "../components/ui/Dropdown.astro"
 	</section>
 </div>
 <div class="medier-podcast-section">
-	<a href="#"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
+	<a href="#"><img src="/images/articleimages/podcastimage.webp" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
 	</div>
 <div class="medier-second-section">
 	<h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
 	<div class="medier-second-grid">
 	<section class="mediumarticlecard">
-		<a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?"></a>
+		<a class="hoverstate" href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?"></a>
 	</section>
 	<section class="double-articlecard-second">
-		<a href="#">	<ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
-			<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+		<a href="#">	<ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
+			<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
 	</section>
 	</div>
 </div>
 <div class="medier-podcast-section">
-<a href="#"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
+<a href="#"><img src="/images/articleimages/podcastimage.webp" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
 </div>
 <div class="medier-fourth-section">
 	<h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
 	<div class="medier-fourth-grid">
 	<section class="mediumarticlecard">
-		<a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?"></a>
+		<a class="hoverstate" href="#"><img src="/images/articleimages/bananaarticle.webp" alt="Artikel hvordan onanerer man?"></a>
 	</section>
 	<section class="double-articlecard-second">
-		<a href="#">	<ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
-			<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+		<a href="#">	<ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="/images/articleimages/redbluegirlarticle.webp" /></a>
+			<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="/images/articleimages/banana.webp" /></a>
 	</section>
 	</div>
 </div>
