--- a/src/pages/om-os.astro
+++ b/src/pages/om-os.astro
@@ -11,7 +11,7 @@ import Button from "../components/ui/Button.astro";
       <div class="image-container-desktop hide-mobile">
         <img
           class="image-desktop"
-          src="images/heroimages/girl-sitting-alone.png"
+          src="/images/heroimages/girl-sitting-alone.webp"
           alt="Pige sidder med hoved lænende på hænder"
         />
       </div>
@@ -30,7 +30,7 @@ import Button from "../components/ui/Button.astro";
       <div class="image-container-mobile hide-desktop">
         <img
           class="image-mobile"
-          src="images/heroimages/girl-sitting-alone-small.png"
+          src="/images/heroimages/girl-sitting-alone-small.webp"
           alt="Pige sidder med hoved lænende på hænder"
         />
       </div>
@@ -40,7 +40,7 @@ import Button from "../components/ui/Button.astro";
       <div class="image-container-desktop hide-mobile">
         <img
           class="image-desktop"
-          src="images/heroimages/girls-piggyride.png"
+          src="/images/heroimages/girls-piggyride.webp"
           alt="Pige sidder med hoved lænende på hænder"
         />
       </div>
@@ -60,7 +60,7 @@ import Button from "../components/ui/Button.astro";
       <div class="image-container-mobile hide-desktop">
         <img
           class="image-mobile"
-          src="images/heroimages/girls-piggyride-small.png"
+          src="/images/heroimages/girls-piggyride-small.webp"
           alt="Pige sidder med hoved lænende på hænder"
         />
       </div>
