--- a/src/pages/specificarticlepage.astro
+++ b/src/pages/specificarticlepage.astro
@@ -29,7 +29,7 @@ import Button from "../components/ui/Button.astro";
  <div >
     <p class="themeheader">• Venskaber og Familie</p> 
     <h2 class="primary-header">Hvordan vander vi venskabets blomst?</h2> 
-    <img class="heroimg" src="images/articleimages/flower2.jpg" alt="Piger på trapper">
+    <img class="heroimg" src="images/articleimages/flower2.webp" alt="Piger på trapper">
 </div>
 
 
@@ -57,8 +57,8 @@ import Button from "../components/ui/Button.astro";
 
 <h2 class="sub-header-underlined">Læs mere</h2>
 <section class="readmore">
-<img src="images/articleimages/bananaarticle.png" alt="Hvordan onanerer man? Artikel">
-<img src="images/articleimages/girlsarticle.png" alt="Kropsbilleder - Hvordan påvirker de os? Artikel">
+<img src="images/articleimages/bananaarticle.webp" alt="Hvordan onanerer man? Artikel">
+<img src="images/articleimages/girlsarticle.webp" alt="Kropsbilleder - Hvordan påvirker de os? Artikel">
 
 
 </section>
