--- a/src/pages/stot.astro
+++ b/src/pages/stot.astro
@@ -16,7 +16,7 @@ import ButtonDonate from "../components/ui/ButtonDonate.astro";
           mistrivslen.
         </p>
       </div>
-      <img src="/images/heroimages/girls-on-stairs-3.jpg" alt="" />
+      <img src="/images/heroimages/girls-on-stairs-3.webp" alt="Piger sidder sammen på en trappe." />
     </div>
 
     <div class="donate-section">
@@ -48,7 +48,7 @@ import ButtonDonate from "../components/ui/ButtonDonate.astro";
     </div>
 
     <div class="grid-container reversed">
-      <img src="/images/heroimages/girls-on-stairs-3.jpg" alt="" />
+      <img src="/images/heroimages/girls-on-stairs-3.webp" alt="Piger sidder sammen på en trappe." />
 
       <div>
         <h2 class="subheader">Hvordan hjælper din støtte?</h2>
